...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/edit_fragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sold_date_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sold_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/interest_points_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bathrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bedrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
