...
    <string name="photo_type_bedroom">bedroom</string>
    <string name="photo_type_facade">facade</string>
    <string name="photo_type_kitchen">kitchen</string>
    <string name="photo_type_lounge">lounge</string>
    <string name="photo_type_none">none</string>

    <string name="property_update_locally">The changes have been saved on phone and will be saved remotely once the connection wil be reestablished</string>
    <string name="property_update_totally">The changes have been saved fully</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="change_property_type">CHANGE TYPE</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="no">NO</string>
    <string name="change_property_status">CHANGE STATUS</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="change_photo">Change photo</string>
    <string name="update_photo_detail">UPDATE PHOTO</string>
    <string name="delete_photo">DELETE PHOTO</string>
    <string name="confirm_save_changes_dialog_title">UPDATE PROPERTY</string>
    <string name="confirm_save_changes_dialog_message">You made changes.Would you like to save them?</string>
    <string name="confirm_save_changes">CONFIRM CHANGES</string>
    <string name="confirm_create_changes_dialog_title">CREATE PROPERTY</string>
    <string name="confirm_create_changes_dialog_message">You have started to create a property. Would you like to save it?</string>
    <string name="confirm_create_changes">CONFIRM CREATION</string>
    <string name="is_main_photo_question">is the main photo?</string>
    <string name="cannot_delete_photo">You cannot delete this photo because it is the main one</string>
    <string name="no_photos_for_this_property">No Photos For this Property</string>
...
