<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_item_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/menu_item_toolbar_background"
        android:paddingStart="12dp"
        android:paddingTop="2dp"
        android:paddingEnd="12dp"
        android:paddingBottom="2dp">

        <ImageView
            android:id="@+id/menu_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/menu_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbar_menuitem_text_size"
            android:clickable="false"
            android:textIsSelectable="false"
            android:fontFamily="@font/roboto_slab_bold"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>